deployments/kubernetes/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8spin-operator
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      application: k8spin-operator
  template:
    metadata:
      labels:
        application: k8spin-operator
    spec:
      serviceAccountName: k8spin-operator
      containers:
      - name: k8spin-operator
        image: ghcr.io/k8spin/k8spin-operator:latest
        imagePullPolicy: IfNotPresent
