deployments/kubernetes/reporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8spin-reporter
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      application: k8spin-reporter
  template:
    metadata:
      labels:
        application: k8spin-reporter
    spec:
      serviceAccountName: k8spin-reporter
      containers:
      - name: k8spin-reporter
        image: ghcr.io/k8spin/k8spin-reporter:latest
